log.txt

> Task :compileJava FAILED
C:\Users\User\Documents\MindustryToolMod-1\src\mindustrytool\plugins\voicechat\VoiceChatPlugin.java:141: error: cannot find symbol
            float nameWidth = Fonts.def.width(player.name);
                                       ^
  symbol:   method width(String)
  location: variable def of type Font
1 error

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --info option to get more log output.
> Run with --scan to get full insights.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 9.0.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/8.8/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 3s
1 actionable task: 1 executed
